--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           browser: chrome
         env: 
-          ARGOS_TOKEN: §{{ secrets.ARGOS_TOKEN }}
-          BASE_URL: §{{ secrets.BASE_URL }}
-          STAGE_PASSW: §{{ secrets.STAGE_PASSW }}
-          STAGE_USER: §{{ secrets.STAGE_USER }}
+          ARGOS_TOKEN: ${{ secrets.ARGOS_TOKEN }}
+          BASE_URL: ${{ secrets.BASE_URL }}
+          STAGE_USER: ${{ secrets.STAGE_USER }}
+          STAGE_PASSW: ${{ secrets.STAGE_PASSW }}
 
   # scheduled-cypress-run-windows:
   #   runs-on: windows-latest
