--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Cypress visual tests - LIV part I
 
 on:
   workflow_dispatch: # Manually trigger the workflow
-  # schedule:
-    # - cron: '00 10 * * 1-5' # Schedule to run every day at 03:15 AM from Monday to Friday
+  schedule:
+    - cron: '35 11 * * 1-5' # Schedule to run every day at 03:15 AM from Monday to Friday (aktuell deutsche Zeit - 2 Stunden)
 
 jobs:
   manual-cypress-run-windows:
@@ -22,15 +22,20 @@ jobs:
           STAGE_USER: ${{ secrets.STAGE_USER }}
           STAGE_PASSW: ${{ secrets.STAGE_PASSW }}
 
-  # scheduled-cypress-run-windows:
-  #   runs-on: windows-latest
-  #   if: github.event_name == 'schedule' # run only scheduled 
-  #   steps:
-  #     - name: Checkout-branch
-  #       uses: actions/checkout@v4
-  #       with:
-  #         ref: dailyTesting
-  #     - name: run-tests-on-dailyTesting 
-  #       uses: cypress-io/github-action@v6
-  #       with:
-  #         browser: chrome
+  scheduled-cypress-run-windows:
+    runs-on: windows-latest
+    if: github.event_name == 'schedule' # run only scheduled 
+    steps:
+      - name: Checkout - scheduled
+        uses: actions/checkout@v4
+        with:
+          ref: dailyTesting
+      - name: Run Cypress tests - scheduled
+        uses: cypress-io/github-action@v6
+        with:
+          browser: chrome
+        env: 
+          ARGOS_TOKEN: ${{ secrets.ARGOS_TOKEN }}
+          BASE_URL: ${{ secrets.BASE_URL }}
+          STAGE_USER: ${{ secrets.STAGE_USER }}
+          STAGE_PASSW: ${{ secrets.STAGE_PASSW }}
