--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,14 @@ name: Cypress visual tests - LIV part I
 on:
   workflow_dispatch: # Manually trigger the workflow
   schedule:
-    - cron: '42 11 * * 1-5' # Schedule to run every day at 03:15 AM from Monday to Friday (aktuell deutsche Zeit - 2 Stunden)
+    - cron: '00 01 * * 1-5' # Schedule to run every day at 1:00 AM from Monday to Friday (aktuell deutsche Zeit - 2 Stunden)
 
 jobs:
   manual-cypress-run-windows:
     runs-on: windows-latest
     if: github.event_name == 'workflow_dispatch' # run only manually
+    tags:
+      - manual
     steps:
       - name: Checkout 
         uses: actions/checkout@v4
@@ -25,6 +27,8 @@ jobs:
   scheduled-cypress-run-windows:
     runs-on: windows-latest
     if: github.event_name == 'schedule' # run only scheduled 
+    tags:
+      - scheduled
     steps:
       - name: Checkout - scheduled
         uses: actions/checkout@v4
