--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Cypress visual tests - LIV part I
 
 on:
   workflow_dispatch: # Manually trigger the workflow
-  # schedule:
-  #   - cron: '00 01 * * 1-5' # Schedule to run every day at 1:00 AM from Monday to Friday (aktuell deutsche Zeit - 2 Stunden)
+  schedule:
+    - cron: '00 01 * * 1-5' # Schedule to run every day at 1:00 AM from Monday to Friday (aktuell deutsche Zeit - 2 Stunden)
 
 jobs:
   manual-cypress-run-windows:
